# django_tech_blog

./: .gitignore  README.md  abcdef.py  banned_words.txt  pyproject.toml  requirements.txt  utils.py  요구명세.md
accounts/: forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_profile_image_userprofile.py  0002_follow.py  0003_alter_userprofile_user.py
blogs/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_post_hit.py  0002_bookmark.py  0002_comment.py  0002_remove_post_img_upload_like.py  0003_alter_comment_options_comment_parent.py  0003_post_like_count.py  0004_alter_like_post.py
blogs/templatetags/: safe_content.py
chatgptapi/: apps.py  forms.py
config/: settings.py  urls.py
search/: urls.py  views.py
static/css/: plugin.min.css  plugin.min.rtl.css  style.rtl.css
static/js/: custom-script.min.js  env.js  plugins.min.js
templates/: 404.html  comment.html
templates/accounts/: login.html  personal_info.html  signup.html
templates/blogs/: bookmarked_posts.html  post_detail.html  post_form.html  post_list.html
templates/error/: 403.html  404.html
templates/layout/: app.html  layouts.html
templates/partials/: _footer.html  _menu.html  _scripts.html  _top_nav.html
templates/search/: search_category_detail_result.html  search_category_result.html  search_result.html  search_title_content_result.html  search_writer_detail_result.html  search_writer_result.html
tests/accounts/: test_accounts_forms.py  (+2 more)
tools/: utils.py
(+128 files in other folders)
