[project]
name = "django_tech_blog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "KyungMin.Ko", email = "rhrudals312@naver.com"},
]
dependencies = [
    "django>=5.1",
    "bleach>=6.1.0",
    "pre-commit>=3.8.0",
    "ipython>=8.26.0",
    "pillow>=10.4.0",
    "django-debug-toolbar>=4.4.6",
    "model-bakery>=1.19.5",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
runserver ="python manage.py runserver"
migrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
user = "python manage.py createsuperuser"
test = "python manage.py test"

[tool.ruff.lint]
ignore = ["F401"]
